# spacegate

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.adoc  CNAME  CONTRIBUTING.adoc  Cargo.toml  Makefile.toml  PERF_SECURITY_REPORT.md  README.md  REVIEW_REPORT.md  clippy.toml  dev-admin-docker.sh  todo.md
admin/: Cargo.toml  README.md
admin-server/: Cargo.toml
admin-server/config/: default.gateway.json
admin-server/config/default.routes/: anymatch.json  new route.json
admin-server/res/: .gitattributes  Dockerfile  admin-server.yaml  nginx-default.conf  start.sh
admin-server/res/config/: config.json  config.toml
admin-server/src/: clap.rs  error.rs  main.rs  mw.rs  service.rs  state.rs
admin-server/src/mw/: version_control.rs
admin-server/src/service/: config.rs
admin/config/: conf-default-kube.toml  conf-default-redis.toml  conf-default.toml
admin/res/: Dockerfile  conf-default.toml  dockerfile  libssl1.1_1.1.1f-1ubuntu2.20_amd64.deb  nginx-default.conf  spacegate-admin.yaml  start.sh
admin/src/: api.rs  client.rs  config.rs  constants.rs  dto.rs  helper.rs  initializer.rs  lib.rs  main.rs  model.rs  service.rs
admin/src/api/: auth_api.rs  backend_api.rs  dashboard_api.rs  gateway_api.rs  plugin_api.rs  route_api.rs  spacegate_manage_api.rs  tls_api.rs  tls_config_api.rs
admin/src/dto/: base_dto.rs  filter_dto.rs  query_dto.rs
admin/src/model/: add_dto.rs  base_dto.rs  query_dto.rs  vo.rs  vo_converter.rs
admin/src/service/: backend_ref_service.rs  base_service.rs  gateway_service.rs  helper.rs  plugin_service.rs  route_service.rs  secret_service.rs  spacegate_manage_service.rs  tls_config_service.rs
admin/tests/: test_by_redis.rs  test_http_client.rs
binary/admin-server/: Cargo.toml
binary/admin-server/src/: clap.rs  error.rs  main.rs  mw.rs  service.rs  state.rs
binary/ai-gateway-service/: Cargo.toml  README.md
binary/ai-gateway-service/config/: ai-gateway-service.example.toml  ai-gateway-service.toml
binary/ai-gateway-service/scripts/: queue-object-store-e2e.sh  run-gateway-e2e.sh  run-gateway-large-body-e2e.sh  run-hurl-tests.sh  run-integration-tests.sh  run-wasm-policy-tests.sh
binary/ai-gateway-service/src/: app.rs  lib.rs  main.rs
binary/spacegate/: Cargo.toml
binary/spacegate/src/: args.rs  main.rs
config/: Cargo.toml
config/src/: backend.rs  config_format.rs  constants.rs  create.rs  delete.rs  k8s_crd.rs  lib.rs  model.rs  retrieve.rs  save.rs  service.rs  update.rs
config/src/backend/: fs.rs  k8s.rs
config/src/config_format/: json.rs
config/src/create/: fs.rs
config/src/delete/: fs.rs
config/src/k8s_crd/: http_spaceroute.rs  sg_filter.rs
config/src/model/: filter.rs  gateway.rs  http_route.rs  k8s_convert.rs  route_match.rs
config/src/retrieve/: fs.rs  k8s.rs
config/src/save/: fs.rs
config/src/service/: backend.rs  config_format.rs  create.rs  delete.rs  listen.rs  retrieve.rs  update.rs
config/src/update/: fs.rs
crates/admin-server/: Cargo.toml
crates/admin-server/res/: Dockerfile  schema
crates/admin-server/src/: clap.rs  error.rs  main.rs  service.rs  state.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  model.rs  service.rs
crates/config/tests/: test_k8s_config.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: backend_service.rs  body.rs  extension.rs  extractor.rs  helper_layers.rs  injector.rs  lib.rs  listener.rs  observability.rs  service.rs  utils.rs
crates/kernel/tests/: test_h2.rs  test_https.rs  test_multi_part.rs  test_sameport.rs  test_websocket.rs
crates/model/: Cargo.toml
crates/model/examples/: generate_mcp_route_crd.rs
crates/model/src/: constants.rs  ext.rs  gateway.rs  http_route.rs  lib.rs  observability.rs  plugin.rs  route_match.rs
crates/model/tests/: k8s_crd_manifest.rs  k8s_deployment_assets.rs  test_parse_config.rs
crates/plugin-wasm/: Cargo.toml
crates/plugin-wasm/src/: abi.rs  config.rs  engine.rs  error.rs  fetch.rs  host_fn.rs  host_state.rs  lib.rs  (+4 more)
crates/shell/: Cargo.toml
examples/mitm-proxy/: Cargo.toml  README.md
examples/sayhello/: Cargo.toml
examples/socks5/: Cargo.toml
examples/wasm-hello/: Cargo.toml  README.md
extension/axum/: Cargo.toml
extension/tracing/: Cargo.toml
impl-hyper/: Cargo.toml
kernel/: Cargo.toml
kernel-common/: Cargo.toml
kernel-common/src/: client.rs  constants.rs  converter.rs  gatewayapi_support_filter.rs  helper.rs  inner_model.rs  lib.rs
kernel/benches/: cache_sliding_window_benchmark.rs  local_sliding_window_benchmark.rs
kernel/res/: gatewayclass.yaml  spacegate-gateway.yaml  spacegate-httproute.yaml
kernel/src/: body.rs  config.rs  constants.rs  extension.rs  extractor.rs  functions.rs  header.rs  helper_layers.rs  helpers.rs  instance.rs  layers.rs  lib.rs  listener.rs  marker.rs  plugin.rs  plugins.rs  server.rs  service.rs
kernel/tests/: init_cache_container.rs  test_compression.rs  test_config_by_redis.rs  test_custom_plugin.rs  test_file.rs  test_https.rs  test_multi_part.rs  test_websocket.rs
plugin/: Cargo.toml
plugin/schema/: header_modifier.json  inject.json  inject.schema.json  limit.json  maintenance.json  redirect.json  redis-count.json  redis-limit.json  retry.schema.json  rewrite.schema.json  static-resource.json  status.schema.json
plugin/src/: error.rs  ext.rs  instance.rs  layer.rs  lib.rs  model.rs  mount.rs  plugins.rs
plugin/tests/: export_schema.rs
plugins/wasm/: .gitignore  Cargo.toml  README.md
serv/: Cargo.toml
serv/src/: main.rs
services/full/: Cargo.toml
services/native/: Cargo.toml
shell/: Cargo.toml
shell/benches/: cache_sliding_window_benchmark.rs  local_sliding_window_benchmark.rs
shell/res/: spacegate-gateway.yaml
shell/src/: cache_client.rs  config.rs  extension.rs  lib.rs  server.rs
shell/tests/: test_compression.rs  test_config_by_redis.rs  test_custom_plugin.rs  test_https.rs  test_websocket.rs
spacegate-plugin/: Cargo.toml
spacegate-plugin/src/: cache.rs  lib.rs
spacegate-tower/: Cargo.toml
spacegate-tower/src/: body.rs  extension.rs  helper_layers.rs  lib.rs  listener.rs  service.rs  utils.rs
(+731 files in other folders)
