[workspace]
members = ["kernel","kernel-dto","services/*","admin"]
resolver="2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = 'abort'
strip = true

[workspace.package]
version = "0.1.0-alpha.7"
authors = ["gudaoxuri <i@sunisle.org>"]
description = "A library-first, lightweight, high-performance, cloud-native supported API gateway"
keywords = ["http", "gateway", "proxy", "websocket", "kubernates"]
categories = ["gateway", "web-programming", "kubernetes", "api"]
homepage = "https://github.com/ideal-world/spacegate"
documentation = "https://docs.rs/spacegate/"
repository = "https://github.com/ideal-world/spacegate"
edition = "2021"
license = "MIT/Apache-2.0"
rust-version = "1.64"

[workspace.dependencies]
# Basic
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
lazy_static = { version = "1.4" }
async-trait = { version = "0.1" }
itertools = { version = "0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = { version = "2" }

# Tardis
tardis = { version = "0.1.0-beta.12" }
# tardis = { path = "../tardis/tardis" }
#tardis = { git = "https://github.com/ideal-world/tardis.git", rev = "9424e16" }

# Http
http = { version = "0.2" }
rustls = { version = "0.21.0" }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24" }
rustls-pemfile = { version = "1" }
tokio-rustls = { version = "0.24", default-features = false }

# K8s
kube = { version = "0.85", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19", features = ["v1_21"] }
k8s-gateway-api = { version = "0.13" }
# validator = { version = "0.16.0", features = ["derive"] }
schemars = { version = "0.8.6" }

# Test
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] }

#async-compression 
async-compression = { version = "0.3.13", default-features = false, features = [
  "tokio",
  "gzip",
  "deflate",
  "brotli",
] }
