[package]
name = "spacegate-admin"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "./README.md"

[[bin]]
name = "spacegate-admin"
path = "src/main.rs"

[lib]
name = "spacegate_admin"
path = "src/lib.rs"

[[test]]
name = "test_by_redis"
required-features = ["test"]
path = "tests/test_by_redis.rs"

[features]
test = ["kernel-common/test"]

[dependencies]
tardis = { workspace = true, features = [
  "web-server",
  "crypto",
  "cache",
  "openapi-rapidoc",
] }
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true

secrecy = { version = "0.8.0", features = ["alloc", "serde"] }
kernel-common = { path = "../kernel-common", features = [
  "admin-support",
  "k8s",
  "cache",
] }
kube = { workspace = true }
k8s-openapi = { workspace = true }
k8s-gateway-api = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
tardis = { workspace = true, features = ["test", "web-client", "web-server"] }
reqwest = { workspace = true }
tracing-subscriber = { workspace = true }
