[package]
name = "spacegate-kernel"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../README.md"


[lib]
name = "spacegate_kernel"
path = "src/lib.rs"

[features]
reload = []

[dependencies]
spacegate-config = { path = "../config" }
regex = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
tower-layer = { workspace = true }
pin-project-lite = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }
serde_regex = { workspace = true }
# http-serde = "2"


tracing = { workspace = true }
hyper-util = { workspace = true, features = [
  "server-auto",
  "client-legacy",
  "tokio",
] }
tokio = { workspace = true, features = ["net", "time", "macros"] }

rand = { version = "0" }
# future
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }

# Tls
hyper-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }

tokio-util = { workspace = true }
[dev-dependencies]
tokio = { version = "1", features = ["net", "time", "rt", "macros"] }
