[package]
name = "spacegate-kernel"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../README.md"


[lib]
name = "spacegate_kernel"
path = "src/lib.rs"

[features]
reload = []
ext-redis = ["spacegate-ext-redis"]


[dependencies]


# http
hyper = { workspace = true }
http-body-util = { workspace = true }
tower-layer = { workspace = true }
pin-project-lite = { workspace = true }
hyper-util = { workspace = true, features = [
  "server-auto",
  "client-legacy",
  "tokio",
] }

# log
tracing = { workspace = true }

# runtime
tokio = { workspace = true, features = ["net", "time", "macros"] }
tokio-util = { workspace = true }


# future
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }

# Tls
hyper-rustls = { workspace = true, features = ["http1", "http2"] }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }

# utils
rand = { version = "0" }
regex = { workspace = true }

# ext-redis
spacegate-ext-redis = { path = "../extension/redis", optional = true }


[dev-dependencies]
tokio = { version = "1", features = ["net", "time", "rt", "macros"] }
axum = { workspace = true, features = ["multipart"] }
md5 = { version = "0.7.0" }
reqwest = { version = "0.12", features = ["multipart", "stream"] }
