[package]
name = "spacegate"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../README.md"

[dependencies]
spacegate-kernel = { version = "0.1.0-alpha1", path = "../kernel", all-features = true }
spacegate-impl-hyper = { version = "0.1.0-alpha1", path = "../impl-hyper", all-features = true }

tardis = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
