[package]
name = "spacegate-shell"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../README.md"

[lib]
name = "spacegate_shell"
path = "src/lib.rs"

[features]
ext-redis = ["spacegate-ext-redis", "spacegate-plugin/redis"]
ext-axum = ["spacegate-ext-axum", "spacegate-plugin/axum"]
cache = ["spacegate-plugin/cache", "deadpool-redis", "spacegate-ext-redis"]
file = []
k8s = [
  "kube",
  "k8s-openapi",
  "k8s-gateway-api",
  "schemars",
  "cache",
  "spacegate-plugin/rewrite",
  "spacegate-plugin/header-modifier",
  "spacegate-plugin/redirect",
]
plugin-all = ["spacegate-plugin/full"]
plugin-cache = ["spacegate-plugin/cache"]
plugin-limit = ["spacegate-plugin/limit"]
plugin-header-modifier = ["spacegate-plugin/header-modifier"]
plugin-inject = ["spacegate-plugin/inject"]
plugin-redirect = ["spacegate-plugin/redirect"]
plugin-retry = ["spacegate-plugin/retry"]
plugin-rewrite = ["spacegate-plugin/rewrite"]
plugin-maintenance = ["spacegate-plugin/maintenance"]
# plugin-decompression = ["spacegate-plugin/decompression"]
plugin-status = ["spacegate-plugin/status"]


[dependencies]
spacegate-kernel = { path = "../kernel", features = ["reload"] }
spacegate-plugin = { path = "../plugin", features = ["schema"] }
spacegate-config = { path = "../config" }
spacegate-ext-redis = { path = "../extension/redis", optional = true }
spacegate-ext-axum = { path = "../extension/axum", optional = true }

serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
async-trait.workspace = true
itertools.workspace = true
urlencoding.workspace = true
async-compression.workspace = true
tracing.workspace = true
tokio.workspace = true
futures-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
ipnet = { workspace = true, features = ["serde"] }

bytes = { workspace = true }

kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
k8s-gateway-api = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
async-stream = "0.3.5"
tokio-util = { version = "0.7.8", features = ["io"] }

deadpool-redis = { workspace = true, optional = true }
regex = { workspace = true }

[dev-dependencies]
tardis = { workspace = true, features = ["test", "web-client", "web-server", "ws-client"] }
reqwest = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }
testcontainers-modules = { workspace = true, features = ["redis"] }
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "test_config_by_redis"
required-features = ["cache"]

[[test]]
name = "test_websocket"
required-features = ["plugin-rewrite"]

# [[bench]]
# name = "cache_sliding_window_benchmark"
# required-features = ["cache"]
# harness = false

# [[bench]]
# name = "local_sliding_window_benchmark"
# harness = false
