[package]
name = "ai-gateway-service"
version.workspace = true
authors.workspace = true
description = "External rate-limit and queue service for SpaceGate AI gateway wasm plugins"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"

[dependencies]
axum = { workspace = true, features = ["tracing", "macros"] }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { workspace = true }
fred = { version = "10.1.0", default-features = false, features = ["default-nil-types", "enable-rustls", "i-keys", "i-scripts", "i-streams", "subscriber-client", "transactions"] }
http = "1"
reqwest = { workspace = true, features = ["json"] }
schemars = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ulid = "1.1"

[features]
test-support = []

[lib]
name = "ai_gateway_service"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["test-support"]

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
